# baklava

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  build_local.rs
.cargo/: config.toml
.github/workflows/: ci.yaml
examples/: compare.rs  thread_compare.rs
include/: inspireface.h
include/inspireface/: information.h
src/: error.rs  ffi_wrapper.rs  lib.rs  main.rs  shim.h
