[package]
name = "baklava"
description = "A rust wrapper around the InsightFace library to perform face comparison"
version = "0.1.0"
edition = "2021"
authors = ["Marc Intha-amnouay <marc.inthaamnouay@gmail.com>"]
keywords = ["insightface", "face-comparison", "inspireface"]

[dependencies]
cxx = "1.0"
autocxx = "0.30.0"

[build-dependencies]
autocxx-build = "0.30.0"
miette = { version = "5", features = ["fancy"] }

[dev-dependencies]
reqwest = { version = "0.12.23", features = ["blocking"] }

[[example]]
name = "compare"

[[example]]
name = "thread_compare"
