[package]
name = "baklava"
description = "A rust wrapper around the InsightFace library to perform face comparison"
version = "0.1.2"
edition = "2021"
authors = ["Marc Intha-amnouay <marc.inthaamnouay@gmail.com>"]
keywords = ["insightface", "face-comparison", "inspireface"]
exclude = ["face1_test.png", "face2_test.png", "insightface"]
license = "MIT"

[dependencies]
cxx = "1.0"
autocxx = "0.30.0"

[patch.crates-io]
autocxx = { git = "https://github.com/shigedangao/autocxx.git", branch = "main" }

[build-dependencies]
autocxx-build = "0.30.0"

[dev-dependencies]
reqwest = { version = "0.12.23", features = ["blocking"] }

[[example]]
name = "compare"

[[example]]
name = "thread_compare"
